; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_rate/sample/extr_sample.c_ath_rate_newassoc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_rate/sample/extr_sample.c_ath_rate_newassoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_softc = type { i32 }
%struct.ath_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ath_rate_newassoc(%struct.ath_softc* %0, %struct.ath_node* %1, i32 %2) #0 {
  %4 = alloca %struct.ath_softc*, align 8
  %5 = alloca %struct.ath_node*, align 8
  %6 = alloca i32, align 4
  store %struct.ath_softc* %0, %struct.ath_softc** %4, align 8
  store %struct.ath_node* %1, %struct.ath_node** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.ath_softc*, %struct.ath_softc** %4, align 8
  %11 = load %struct.ath_node*, %struct.ath_node** %5, align 8
  %12 = getelementptr inbounds %struct.ath_node, %struct.ath_node* %11, i32 0, i32 0
  %13 = call i32 @ath_rate_ctl_reset(%struct.ath_softc* %10, i32* %12)
  br label %14

14:                                               ; preds = %9, %3
  ret void
}

declare dso_local i32 @ath_rate_ctl_reset(%struct.ath_softc*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
